# docs/swagger.json
@@ -641,6 +641,82 @@
                 }
             }
         },
+        "city.Response": {
+            "type": "object",
+            "properties": {
+                "geocenter": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "currency.Response": {
+            "type": "object",
+            "properties": {
+                "decimals": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "prefix": {
+                    "type": "boolean"
+                },
+                "sing": {
+                    "type": "string"
+                }
+            }
+        },
+        "delivery.Area": {
+            "type": "object",
+            "properties": {
+                "latitude": {
+                    "type": "string"
+                },
+                "longitude": {
+                    "type": "string"
+                }
+            }
+        },
+        "delivery.Period": {
+            "type": "object",
+            "properties": {
+                "day": {
+                    "type": "string"
+                },
+                "from": {
+                    "type": "string"
+                },
+                "to": {
+                    "type": "string"
+                }
+            }
+        },
+        "delivery.Response": {
+            "type": "object",
+            "properties": {
+                "areas": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/delivery.Area"
+                    }
+                },
+                "isActive": {
+                    "type": "boolean"
+                },
+                "periods": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/delivery.Period"
+                    }
+                }
+            }
+        },
         "product.Request": {
             "type": "object",
             "properties": {
@@ -685,13 +761,56 @@
                 }
             }
         },
+        "schedule.Period": {
+            "type": "object",
+            "properties": {
+                "day": {
+                    "type": "string"
+                },
+                "from": {
+                    "type": "string"
+                },
+                "to": {
+                    "type": "string"
+                }
+            }
+        },
+        "schedule.Response": {
+            "type": "object",
+            "properties": {
+                "isActive": {
+                    "type": "boolean"
+                },
+                "periods": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schedule.Period"
+                    }
+                }
+            }
+        },
         "store.Request": {
             "type": "object",
             "properties": {
                 "address": {
                     "type": "string"
                 },
+                "area": {
+                    "$ref": "#/definitions/delivery.Area"
+                },
+                "city": {
+                    "$ref": "#/definitions/city.Response"
+                },
                 "cityID": {
+                    "type": "string"
+                },
+                "currency": {
+                    "$ref": "#/definitions/currency.Response"
+                },
+                "delivery": {
+                    "$ref": "#/definitions/delivery.Response"
+                },
+                "id": {
                     "type": "string"
                 },
                 "isActive": {
@@ -708,6 +827,9 @@
                 },
                 "rating": {
                     "type": "number"
+                },
+                "schedule": {
+                    "$ref": "#/definitions/schedule.Response"
                 }
             }
         }
